# gas-giant

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/tdd-guard/data/: test.json
.github/workflows/: ci.yml  gate-smoke.yml
.superpowers/sdd/: progress.md
blender_addon/gasgiant_importer/: __init__.py  atmosphere.py  blender_manifest.toml  compat.py  importer.py  manifest_schema.py  material.py
docs/: architecture.md  blender_addon.md  formations.md  presets.md  realism.md  recipes.md  roadmap.md  sliders.md
docs/reviews/: 2026-07-02-comprehensive-review.md  2026-07-03-gate-rebaseline-addendum.md  2026-07-05-w14-calibration-addendum.md  2026-07-07-w13-gui-loop-overhead-findings.md
docs/superpowers/plans/: 2026-06-15-m0-shallow-water-spike.md  2026-06-15-m0p5-gpu-2layer-render-probe.md  2026-06-15-m1-gpu-shallow-water.md  2026-06-15-m2-adv-semi-lagrangian.md  2026-06-16-m3-baroclinic.md  2026-06-16-m3-coupling-ship.md  2026-06-16-m3-coupling.md  2026-06-16-m3-ship-review-fixes.md  2026-07-07-field-driven-detail.md  2026-07-19-hero-bracket-size-relative.md  2026-07-19-hero-jet-environment-machinery.md  2026-07-19-wake-billow-crux-spike.md
docs/superpowers/specs/: 2026-06-15-m2-adv-semi-lagrangian-design.md  2026-06-15-shallow-water-gas-giant-solver-design.md  2026-06-16-m3-baroclinic-design.md  2026-06-16-m3-coupling-design.md  2026-06-16-m3-coupling-ship-design.md  2026-06-16-m3-coupling-verdict.md  2026-06-16-m3-qtarget-falsified.md  2026-07-07-field-driven-detail-design.md  2026-07-08-detail-character-spike-verdict.md  2026-07-09-hero-emergence-design.md  2026-07-19-hero-bracket-size-relative-design.md  2026-07-19-hero-jet-environment-design.md  2026-07-19-wake-billow-crux-VERDICT.md  2026-07-19-wake-billow-crux-spike-design.md  2026-07-21-stratified-wake-billow-spike-verdict.md  2026-07-24-resolution-invariance-spike-verdict.md  m0-verdict.md  m0p5-verdict.md  m1-verdict.md  m2-adv-verdict.md  m2-verdict.md  m3-verdict.md
scripts/: _chromo_compare.py  _ffr_compare.py  _ffr_eval.py  _plume_compare.py  audit_features.py  baro_scale_sweep.py  build_addon.py  build_legacy_presets.py  build_neptune_preset.py  build_vorticity_presets.py  build_warm_preset.py  calibrate_palette.py  compare_reference.py  fetch_references.py  fyi_hero_aspect.py  fyi_hero_realism.py  inject_ab.py  jupiter_calib_rows.json  m2b_emergence_hash.py  m2c_omega_equiv.py  measure_grs.py  measure_morphology.py  measure_v15.py  nr1_check.py  p05_baseline_hash.py  perf_16k.py  perf_sor_timing.py  perf_step_breakdown.py  render_readme_examples.py  render_slider_examples.py  spike_detail_character.py  spinup_sweep.py  sw_m1_williamson.py  sw_m2_validation.py  sw_m3_couple.py  sw_m3_fielddump.py  sw_m3_render_compare.py  sw_m3_rendergate.py  sw_m3_saturate.py  sw_m3_spike_coupling.py  (+12 more)
scripts/spike_wake_billow/: README.md  config.py  discriminator_decay.py  environment.py  healthy_window.py  metrics.py  mock_billows.py  probe_geometry.py  render_discriminator.py  render_healthy.py  run_gate0a.py  run_gate1.py  solver.py
src/gasgiant/: __init__.py  cli.py  diagnostics.py  jobs.py
src/gasgiant/app/: __init__.py  launcher.py  main.py  panels.py  sphere_preview.py  thumbnails.py  viewport.py
src/gasgiant/core/: __init__.py  brush.py  domain.py
src/gasgiant/engine/: __init__.py  baroclinic_coupling.py  checkpoint.py  facade.py  invalidation.py  snapshot.py
src/gasgiant/export/: __init__.py  exporter.py  manifest.py  mapset.schema.json  rings.py  sheet.py  video.py  writers.py
src/gasgiant/gl/: __init__.py  context.py
src/gasgiant/palette/: __init__.py  agx.py  fit.py  gradient.py  reference.py
src/gasgiant/params/: __init__.py  interp.py  migrations.py  model.py  presets.py  randomize.py  seeds.py  tiers.py
src/gasgiant/presets/: __init__.py  gas_giant_warm.json  ice_giant.json  jupiter_baroclinic.json  jupiter_like.json  jupiter_vorticity.json  neptune.json  (+1 more)
tests/: conftest.py
tests/blender/: test_import.py
tests/gpu/: test_agx_glsl.py  test_band_mod.py  test_band_tint.py  test_belt_fade_render.py  test_belt_replenish.py  test_cast_levers.py  test_checkpoint.py  test_checkpoint_resume.py  test_chroma_fx.py  test_cirrus_aspect.py  test_cirrus_fibers.py  test_cube_export.py  test_deformation_radius.py  test_detail_chroma.py  test_detail_fx.py  test_detail_per_storm_emergence.py  test_eddy_drag.py  test_emission.py  test_export_cli.py  test_export_sequence.py  test_exporter.py  test_facade_rebuild.py  test_festoon_hero.py  test_field_drive.py  test_flow_map.py  test_formations.py  test_hero_antipode.py  test_hero_aspect.py  test_hero_calm.py  test_hero_collar_wrap.py  test_hero_emergence.py  test_hero_mottle.py  test_hero_rim_tint.py  test_hero_rim_warp.py  test_hero_solid_core.py  test_hero_wake.py  test_hero_wake_billows.py  test_hero_wake_braid.py  test_hero_wake_detail.py  test_m3_coupling.py  (+30 more)
tests/spikes/: resolution_invariance_spike.py  test_gravity_wave_stability_spike.py  test_polar_advective_spike.py  test_slsi_fastjet_spike.py
tests/unit/: test_ab_roi.py  test_addon_contract.py  test_agx_view.py  test_app_baroclinic_toast.py  test_aurora_disclosure.py  test_band_fade.py  test_band_features.py  test_band_identity.py  test_band_template.py  test_band_tint_params.py  test_baroclinic_driver.py  test_baroclinic_kernel_wiring.py  test_baroclinic_params.py  test_baroclinic_source.py  test_bright_cloud_centers.py  test_brush.py  test_calibrate_fit.py  test_cast_list.py  test_checkpoint_cli.py  test_checkpoint_fields.py  test_checkpoint_swap.py  test_cli_sequence_args.py  test_commit_loop.py  test_control_literacy.py  test_cube_manifest.py  test_cube_validate.py  test_derive_default_projection.py  test_detail_chroma_params.py  test_detail_default_projection.py  test_detail_fx_metadata.py  test_dual_path.py  test_export_ux.py  test_facade_baroclinic_status.py  test_facade_hero_r_core.py  test_facade_seat.py  test_field_drive_golden_hash.py  test_field_drive_metadata.py  test_first_run_help.py  test_flow_feather_consistency.py  test_flow_map_params.py  (+75 more)
(+94 files in other folders)
