[project]
name = "gasgiant"
version = "0.1.0"
description = "Procedural gas giant texture map generator with a GPU sim-advected cloud engine and live preview"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
authors = [{ name = "bloknayrb", email = "bloknayrb@gmail.com" }]
dependencies = [
    "numpy>=2.1",
    "moderngl>=5.12",
    "pydantic>=2.9",
    "openexr>=3.3",
    "opencv-python-headless>=4.10",
    "jsonschema>=4.23",
]

# GUI uses imgui-bundle's native hello_imgui runner (window + backend in C++,
# version-matched to imgui by construction); ModernGL attaches to its context.
[project.optional-dependencies]
gui = [
    "imgui-bundle>=1.92",
]

[project.scripts]
gasgiant = "gasgiant.cli:main"
gasgiant-studio = "gasgiant.app.main:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
    "import-linter>=2.1",
    # scipy: independent sparse direct solve (helmholtz_solve_exact) used as the
    # ground-truth for the M2 SOR Helmholtz convergence tests. Test-only.
    "scipy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gasgiant"]

[tool.pytest.ini_options]
# tests/blender runs inside Blender (blender --background --python), not pytest.
testpaths = ["tests/unit", "tests/gpu"]
markers = [
    "gpu: tests that require an OpenGL 4.3 context (real GPU or llvmpipe)",
    "slow: heavy CPU tests (reference solvers); excluded from the fast loop via -m 'not gpu and not slow'",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
# E702/E701 (compound statements via `;` or inline `:`) are the codebase's
# deliberate dense numerical style (e.g. `a = np.zeros(...); a[1:] = ...`),
# pervasive in the shallow-water reference -- enforcing them would mean rewriting
# hundreds of intentional lines for no correctness gain.
ignore = ["E702", "E701"]

[tool.ruff.lint.per-file-ignores]
# Tests and one-off experiment/audit scripts favour dense inline numerical
# expressions and verbose f-string diagnostics; the 100-col limit is enforced on
# shipped `src/` but relaxed here (low-value churn, not shipped code).
"tests/**" = ["E501"]
"scripts/**" = ["E501"]

[tool.importlinter]
root_package = "gasgiant"
include_external_packages = true

[[tool.importlinter.contracts]]
name = "Layered architecture: params/palette -> gl -> core -> sim -> render -> jobs -> export -> engine -> app/cli"
type = "layers"
layers = [
    "gasgiant.app | gasgiant.cli",
    "gasgiant.engine",
    "gasgiant.export",
    "gasgiant.jobs",
    "gasgiant.render",
    "gasgiant.sim",
    "gasgiant.core",
    "gasgiant.gl",
    "gasgiant.params | gasgiant.palette",
]
containers = []
exhaustive = false

[[tool.importlinter.contracts]]
name = "Core layers never import GUI libraries"
type = "forbidden"
source_modules = [
    "gasgiant.params",
    "gasgiant.palette",
    "gasgiant.gl",
    "gasgiant.core",
    "gasgiant.sim",
    "gasgiant.render",
    "gasgiant.export",
    "gasgiant.jobs",
    "gasgiant.engine",
]
forbidden_modules = [
    "imgui_bundle",
    "gasgiant.app",
]
